# MINIPROJECT2

./: README.md  func.py  pyproject.toml
