[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecog-data-analysis"
version = "0.1.0"
description = "A project to analyze event-related potentials (ERP) from ECoG data."
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0"
]
